# CourseWork-3

./: pyproject.toml
src/: functions.py  main.py
