[tool.poetry]
name = "corse-work-3"
version = "0.1.0"
description = ""
authors = ["Surik4tik <romans310795@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
